--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
             <span><h2>About Us</2></span>
 	    <h2>Welcome to CyberBiz Clinic!🌐</h2>	 
             <p>At CyberBiz Clinic, we specialize in providing a full spectrum of IT services, with a strong emphasis on cybersecurity and business solutions. Our mission is to safeguard your digital assets and ensure your business operates smoothly in today’s fast-paced, technology-driven world.</p>
-	    <span>Who We Are</span>
+	    <span>Who We Are:</span>
 	    <p>Founded by a team of passionate IT and cybersecurity experts, CyberBiz Clinic is dedicated to protecting and enhancing your business through innovative technology solutions. We understand the unique challenges faced by businesses in the digital age and are committed to delivering top-notch services that are both effective and affordable.</p>	
-	    <h3>Our Vision</h3>
+	    <span>Our Vision:</span>
 	    <p>To be the leading provider of innovative IT and cybersecurity solutions, empowering businesses to thrive in a secure digital environment.</p>	
-	    <h3>Our Mission</h3>
+	    <span>Our Mission</span>
 	    <p>To deliver exceptional IT and cybersecurity services that protect and enhance our clients’ businesses, ensuring their success in the digital age.</p>
-	    <h3>Our Plan</h3>
-	    <ul style="list-style-type: square;">
+	    <span>Our Plan</span>
+	    <ul>
 	      <li><span>Innovation:</span> Continuously develop and implement cutting-edge technology solutions to meet the evolving needs of our clients.</li>
 	      <li><span>Customer Focus:</span> Maintain a customer-centric approach, ensuring that our services are tailored to the specific requirements of each business.</li>
 	      <li><span>Growth:</span> Expand our service offerings and reach to support more businesses globally.</li>
