--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
 	    <div class="service-box">
                 <i class='bx bxs-check-shield bx-tada service-icon'></i>
-                <h3>Cybersecurity Solutions</h3>
+                <h3>Cybersecurity</h3>
                 <p>
 		<span>Network Security:</span>      Protect against breaches.<br>
 		<span>Device Protection: </span>    Secure endpoints.<br>
@@ -277,7 +277,7 @@
 
             <div class="service-box">    
                 <i class='bx bx-cart bx-fade-left service-icon' ></i>
-                <h3>E-commerce Solutions</h3>
+                <h3>E-commerce</h3>
                 <p>
 		<span>Web Development:</span>     Build e-commerce platforms.<br>
 		<span>Payment Integration:</span> Secure payment processing.<br>
