--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 <!-- services section----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
     <section id="services" class="services scroll-bottom">
         <div class="main-text scroll-scale">
-            <span>Here is a comprehensive list of what we can help you achieve for you, your organization and business</span>
+            <span>Here is a comprehensive list of what we can help you achieve for you, your organization or your business</span>
             <h2>Our Services</h2>
         </div>
 
