--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
         
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/sulaiman.ndamissa/" target=" balnk"><i class='bx bxl-facebook'></i></a>
+                    <a href="https://www.facebook.com/cyberbiz.clinic/" target=" balnk"><i class='bx bxl-facebook'></i></a>
                     <a href="https://www.instagram.com/iamcyberbiz" target=" balnk"><i class='bx bxl-instagram'></i></a>
                     <a href="https://www.github.com/cyberbiz232" target=" balnk"><i class='bx bxl-github'></i></a>
                     <a href="https://sl.linkedin.com/in/sulaiman-ndamisa" target=" balnk"><i class='bx bxl-linkedin'></i></a>
