--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset='UTF-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>CyberBiz career Portfolio || Sulaiman Ndamisa Website</title>
+	<link href="avicon.png" rel="icon">
+  	<link href="apple-touch-icon.png" rel="apple-touch-icon">    
         <meta name='viewport' content='width=device-width, initial-scale=1.0'>
         <link rel='stylesheet' href="style.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
