--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <a href="https://www.facebook.com/cyberbiz.clinic/" target=" balnk"><i class='bx bxl-facebook'></i></a>
                     <a href="https://www.instagram.com/iamcyberbiz" target=" balnk"><i class='bx bxl-instagram'></i></a>
                     <a href="https://www.github.com/cyberbiz232" target=" balnk"><i class='bx bxl-github'></i></a>
-                    <a href="https://sl.linkedin.com/in/sulaiman-ndamisa" target=" balnk"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.linkedin.com/company/cyberbiz-clinic/?viewAsMember=true" target=" balnk"><i class='bx bxl-linkedin'></i></a>
 	            <a href="https://sl.linkedin.com/in/sulaiman-ndamisa" target=" balnk"><i class='bx bxl-twitter'></i></a>		
                 </div>
             </div>
