--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <ul class="navlist">
                 <li><a href="#home" style="--i:1;">Home</a></li>
                 <li><a href="#about" style="--i:2;">About Us</a></li>
-                <li><a href="#services" style="--i:3;">Units / Services</a></li>
-                <li><a href="#portfolio" style="--i:5;">Projects and Impact</a></li>
+                <li><a href="#services" style="--i:3;">Units</a></li>
+                <li><a href="#portfolio" style="--i:5;">Projects</a></li>
 		<li><a href="#skills" style="--i:4;">Partnerships</a></li>    
-                <li><a href="#contact" style="--i:6;">News and Blog</a></li>
+                <li><a href="#contact" style="--i:6;">News</a></li>
 		<li><a href="#contact" style="--i:6;">Contact Us</a></li>
 		<li><a href="#contact" style="--i:6;">Get Involved / Join Us</a></li>
             </ul>
