--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <div class="home-content scroll-scale">
                 <h1>Welcome to CyberBiz Clinic</h1>
                 <div class="change-text">
-                    <h3>Our units and services</h3>
+                    <h3>Our units</h3>
                     <h3>
                         <span class="word">EmpHub&nbspUnit</span>
                         <span class="word">DigCizen&nbspUnit</span>
-                        <span class="word">SaniTech&nbspUnits</span>
-                        <span class="word">Sierra&nbspIntelligence&nbspAgency</span>
+                        <span class="word">SaniTech&nbspUnit</span>
+                        <span class="word">S.I.A&nbspUnit</span>
                         <span class="word">AccessEcom&nbspUnit</span>  
                     </h3>
                 </div>
