--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                         <span class="word">AccessEcom&nbspUnit</span>  
                     </h3>
                 </div>
-        
-                <h3>“Choose <span>CyberBiz Clinic</span>: Where Cybersecurity Meets Business Excellence!”</h3>
+		<h3><span>CyberBiz Clinic:</span> is Driving Digital Transformation and Empowering Communities through Innovative Technology</h3>
 		<h4>At <span>CyberBiz Clinic</span>, we don’t just protect your digital assets; we empower your business to thrive in the digital age. Our name says it all</h4>		
 		<p><span>Cyber</span>: Cutting-edge cybersecurity solutions tailored to your unique needs.<br>
                    <span>Biz</span>: Business-focused strategies that drive growth and efficiency.<br>
