--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="about-content scroll-scale">
             <span><h2>About Us</2></span>
 	    <h2>Welcome to CyberBiz Clinic!🌐</h2>	 
-            <p>At CyberBiz Clinic, we specialize in providing a full spectrum of IT services, with a strong emphasis on cybersecurity and business solutions. Our mission is to safeguard your digital assets and ensure your business operates smoothly in today’s fast-paced, technology-driven world.</p>
+            <p>CyberBiz Clinic is committed to empowering individuals and transforming communities through technology and innovation. Our mission is to provide accessible digital literacy, professional skills training, and cutting-edge IT solutions that foster economic growth and bridge the digital divide. We envision a future where technology empowers every individual, creating opportunities for success and progress. By driving digital transformation, we aim to uplift Sierra Leone and inspire a global impact, paving the way for a connected, innovative, and inclusive world.</p>
 	    <h3>Who We Are:</h3>
 	    <p>Founded by a team of passionate IT and cybersecurity experts, CyberBiz Clinic is dedicated to protecting and enhancing your business through innovative technology solutions. We understand the unique challenges faced by businesses in the digital age and are committed to delivering top-notch services that are both effective and affordable.</p>	
 	    <h3>Our Vision:</h3>
